[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/intro/Intro.gd" type="Script" id=1]
[ext_resource path="res://audio/bgm/story.ogg" type="AudioStream" id=2]
[ext_resource path="res://scenes/intro/Step1.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/intro/Step3.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/intro/FadeInOut.tscn" type="PackedScene" id=5]

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Story" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="Step1" parent="." instance=ExtResource( 3 )]

[node name="Step3" parent="." instance=ExtResource( 4 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Timer" type="Timer" parent="."]

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false
color = Color( 0, 0, 0, 0 )

[connection signal="fade_in_finished" from="FadeIn" to="." method="_on_FadeIn_fade_in_finished"]
[connection signal="fade_out_finished" from="FadeIn" to="." method="_on_FadeIn_fade_out_finished"]
